# walter

./: .buildinfo  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .prospector.yaml  CNAME  CONTRIBUTING.rst  LICENSE  README.rst  api.html  changelog.html  contributing.html  example.py  genindex.html  guide.html  index.html  modd.conf  noxfile.py  objects.inv  pyproject.toml  rtd_requirements.txt  search.html  searchindex.js  setup.py
.github/workflows/: docs.yml  tests.yml
_modules/: index.html
_modules/walter/: config.html  na.html  sources.html
_sources/: api.rst.txt  changelog.rst.txt  index.rst.txt
docs/: Makefile  api.rst  conf.py  guide.rst  index.rst  make.bat
walter/: config.py  config_test.py  na.py  na_test.py  source_list.py  source_list_test.py  sources.py  sources_test.py
